--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <header>
             <section class="centered-content">
-                <h1>Your Name</h1>
+                <h1>Shuting Chen</h1>
                 <p>A short Personal Statement. This should just be approx. four to five sentences max. It's not a CV, but rather a short statement about what conceptual elements your work engages with and what your particular brand of interdiciplinary making looks like.</p>
                 <p>Include a link to your theory blog (or a blogpost of yours) if you think it's helpful. We will not be able to read them in depth, but can skim read, all vital information for your final project must be in that documentation.</p>
             </section>
@@ -27,18 +27,17 @@
             <h3>Term 1</h3>
             <section class="flex-container">
                 <div class="flex-item"> 
-                    <a href="./html-demo-page">
-                        <h4>Optional Documentation Page</h4>
+                    <a href="https://ttmmd55.github.io/-Memory-Boxes/">
+                        <h4>Memory Boxe</h4>
                     </a>
                 </div>
             </section>
 
             <h3>Term 2</h3>
-            <p>At least ONE of these projects must be designed to be exeperienced online & must be responsive (work well on mobile and desktop devices). You must have at least FOUR of your term two sketches here, for creative coding work that is not designed to live online you can use the documentation page format (see page above) & just embed a video. One of the four can be your mid-term group project. You must inlcude your push & pull activity.</p>
             <section class="flex-container">
 
                 <div class="flex-item"> 
-                    <a href="https://rebecca-aston.github.io/hypertext-concrete-poetry/">
+                    <a href="https://ttmmd55.github.io/Hitting-Bottom/">
                         <h4>1. Hypertext Concrete Poem</h4>
                     </a>
                 </div>
@@ -50,8 +49,8 @@
                 </div>
 
                 <div class="flex-item"> 
-                    <a href="https://rebecca-aston.github.io/creatures-web-app-simple/">
-                        <h4>3. Creatures Web App</h4>
+                    <a href="https://ttmmd55.github.io/Tree-planting-/">
+                        <h4>3. Tree planting</h4>
                     </a>
                 </div>
 
