--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </div>
          
                 <div class="flex-item"> 
-                    <a href="https://rebecca-aston.github.io/simple-responsive-3D/">
-                        <h4>2. Pull & Push (must be present) </h4>
+                    <a href="https://ttmmd55.github.io/groupgroup-pull-push/">
+                        <h4>2. Pull & Push </h4>
                     </a>
                 </div>
 
@@ -55,8 +55,8 @@
                 </div>
 
                 <div class="flex-item"> 
-                    <a href="https://remote-painter.glitch.me/">
-                        <h4>4. Remote Painter</h4>
+                    <a href="https://ttmmd55.github.io/DreamDDRREEAAMM/">
+                        <h4>4. Dream</h4>
                     </a>
                 </div>
 
