--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h3>Term 1</h3>
             <section class="flex-container">
                 <div class="flex-item"> 
-                    <a href="https://ttmmd55.github.io/-Memory-Boxes/">
+                    <a href="https://ttmmd55.github.io/-Memory-Boxes/" id="termone">
                         <h4>Memory Boxe</h4>
                     </a>
                 </div>
@@ -37,25 +37,25 @@
             <section class="flex-container">
 
                 <div class="flex-item"> 
-                    <a href="https://ttmmd55.github.io/Hitting-Bottom/">
+                    <a href="https://ttmmd55.github.io/Hitting-Bottom/" id="one">
                         <h4>1. Hypertext Concrete Poem</h4>
                     </a>
                 </div>
          
                 <div class="flex-item"> 
-                    <a href="https://ttmmd55.github.io/groupgroup-pull-push/">
+                    <a href="https://ttmmd55.github.io/groupgroup-pull-push/"  id="two">
                         <h4>2. Pull & Push </h4>
                     </a>
                 </div>
 
                 <div class="flex-item"> 
-                    <a href="https://ttmmd55.github.io/Tree-planting-/">
+                    <a href="https://ttmmd55.github.io/Tree-planting-/" id="three">
                         <h4>3. Tree planting</h4>
                     </a>
                 </div>
 
                 <div class="flex-item"> 
-                    <a href="https://ttmmd55.github.io/DreamDDRREEAAMM/">
+                    <a href="https://ttmmd55.github.io/DreamDDRREEAAMM/" id="four">
                         <h4>4. Dream</h4>
                     </a>
                 </div>
