--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <header>
             <section class="centered-content">
                 <h1>Shuting Chen</h1>
-                <p>A short Personal Statement. This should just be approx. four to five sentences max. It's not a CV, but rather a short statement about what conceptual elements your work engages with and what your particular brand of interdiciplinary making looks like.</p>
-                <p>Include a link to your theory blog (or a blogpost of yours) if you think it's helpful. We will not be able to read them in depth, but can skim read, all vital information for your final project must be in that documentation.</p>
+                <p>I am a visual artist and as such I am very focused on visual expression. During my first two terms, I have been exploring techniques related to computational arts. I have done a lot of experimentation, using p5js, c++ and some other media to create visual artworks. You can see from my work that the themes are diverse and exploratory. Using computational arts to explore the expression of memory, poetry, dreams and some interactive techniques. </p>
+                <p>At the end of the second term, I gradually found my own way of researching and I focused more on the possibilities of combining computational arts as a media and means of communication with art therapy. This is also the direction I would like to take in my future research, and I will continue to investigate and experiment with whether computational arts can be a new form of healing for art therapy.</p>
             </section>
             
 
@@ -69,12 +69,12 @@
             <section class="flex-container">
                 <div class="flex-item"> 
                     <a href="./final-project-documentation">
-                        <h4>Final Project Documentation</h4>
+                        <h4>Final Project: Body paintbrush</h4>
                     </a>
                 </div>
                 <div class="flex-item"> 
                     <a href="https://rebecca-aston.github.io/creatures-web-app-simple/">
-                        <h4>Final Project Link (IF online work)</h4>
+                        <h4>Final Project Link</h4>
                     </a>
                 </div>
             </section>
