--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </a>
                 </div>
                 <div class="flex-item"> 
-                    <a href="https://rebecca-aston.github.io/creatures-web-app-simple/">
+                    <a href="https://ttmmd55.github.io/Body-paintbrush/">
                         <h4>Final Project Link</h4>
                     </a>
                 </div>
