--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
             <h3>Final Project</h3>
             <section class="flex-container">
                 <div class="flex-item"> 
-                    <a href="./final-project-documentation">
+                    <a href="./final-project-documentation" id="termtwo">
                         <h4>Final Project: Body paintbrush</h4>
                     </a>
                 </div>
                 <div class="flex-item"> 
-                    <a href="https://ttmmd55.github.io/Body-paintbrush/">
+                    <a href="https://ttmmd55.github.io/Body-paintbrush/" id="termtwo">
                         <h4>Final Project Link</h4>
                     </a>
                 </div>
