--- a/final-project-documentation/index.html
+++ b/final-project-documentation/index.html
@@ -28,7 +28,7 @@
         <main class="documentation-page">
             <section>
                 <div class="responsive-video centered-content">
-                    <iframe title="vimeo-player" src="https://player.vimeo.com/video/644036051?h=b260a3b1b0" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
+                    <iframe title="vimeo-player" src="https://chrysalis-apricots-djaz.squarespace.com/config/" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
                 </div>
             </section>
             <section>
