--- a/final-project-documentation/index.html
+++ b/final-project-documentation/index.html
@@ -28,7 +28,7 @@
         <main class="documentation-page">
             <section>
                 <div class="responsive-video centered-content">
-                   <video><source src="https://vimeo.com/822960603?share=copy" width="100%" height="100%" frameborder="0" allowfullscreen>  </video>               
+                    <iframe title="vimeo-player" src="https://vimeo.com/822960603?share=copy" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
                 </div>
             </section>
             <section>
