--- a/final-project-documentation/index.html
+++ b/final-project-documentation/index.html
@@ -27,9 +27,13 @@
 
         <main class="documentation-page">
             <section>
-                <div class="responsive-video centered-content">
+                <!-- <div class="responsive-video centered-content">
                     <iframe title="vimeo-player" src="https://vimeo.com/822960603?share=copy" width="100%" height="100%" frameborder="0" allowfullscreen></iframe>
+                </div> -->
+                <div style="padding:45% 0 0 0;position:relative;">
+                    <iframe title="vimeo-player" src="https://player.vimeo.com/video/822960603?h=bf573723e9&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Body paintbrush"></iframe>
                 </div>
+                <script src="https://player.vimeo.com/api/player.js"></script>
             </section>
             <section>
                 <h3>Introduction</h3>
